# Python

./: README.md  epohika.py  fortuneteller.py
ai-doppelganger/: FINE_TUNING.md  README.md  doppel.py  system-prompt-template.md  test_doppelganger.py
dailymindfulness/: dailymindfulness.py
messenger-extractor/: README.md  build_training_pairs.py  (+1 more)
scholarforge/: .gitignore  README.md  pyproject.toml  requirements.txt  scholarforge.py
scholarforge/scholarforge/: __init__.py  __main__.py  _legacy.py
scholarforge/scholarforge/app/: cli.py  onboarding.py
scholarforge/scholarforge/config/: __init__.py  global_config.py
scholarforge/scholarforge/exports/: __init__.py  bibtex.py  csljson.py  markdown.py
scholarforge/scholarforge/forge/: __init__.py
scholarforge/scholarforge/harvest/: __init__.py
scholarforge/scholarforge/net/: __init__.py
scholarforge/scholarforge/premium/: __init__.py  memory_graph.py
scholarforge/scholarforge/projects/: __init__.py  config.py  report.py  workspace.py
scholarforge/scholarforge/provenance/: __init__.py
scholarforge/scholarforge/search/: __init__.py  lexicon.py  query_expansion.py
scholarforge/scholarforge/sources/: __init__.py  base.py  registry.py
scholarforge/scholarforge/tui/: __init__.py  banner.py
scholarforge/scholarforge/utils/: __init__.py
scholarforge/site/: cli.html  features.html  index.html  install.html  pricing.html  sources.html  style.css
scholarforge/tests/: test_exports.py  test_onboarding.py  test_premium.py  test_projects.py  test_query_expansion.py  test_site.py  test_smoke.py  test_trust.py  test_tui_banner.py
(+3 files in other folders)
