[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "scholarforge"
version = "3.4.0-beta.1"
description = "Provenance-first scholarly research workspace. Harvest 20 academic sources, build trustworthy corpora, prepare writing-ready exports."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Anastasios Papalias" }]
requires-python = ">=3.8"
keywords = [
  "academic", "research", "bibliography", "scholarly", "literature-review",
  "openalex", "crossref", "arxiv", "pubmed", "zenodo", "humanities"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Topic :: Scientific/Engineering",
  "Topic :: Text Processing :: Indexing",
]
dependencies = []

[project.optional-dependencies]
pdf = ["pypdf>=3.0"]
docx = ["python-docx>=1.0"]
full = ["pypdf>=3.0", "python-docx>=1.0"]
dev = ["pytest>=7"]

[project.scripts]
scholarforge = "scholarforge.app.cli:main"

[project.urls]
Homepage = "https://github.com/AnastasiosPapalias/Python/tree/main/scholarforge"
Repository = "https://github.com/AnastasiosPapalias/Python"

[tool.setuptools.packages.find]
include = ["scholarforge*"]

[tool.setuptools.package-data]
scholarforge = ["lexicons/*.json"]
